使用MediaBrowserService，优化播放服务

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //rxpermissions 6.0权限管理
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+
     implementation project(':musiclib')
 }
