--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.3.61'
     repositories {
         google()
         jcenter()
