--- a/musiclib/src/main/AndroidManifest.xml
+++ b/musiclib/src/main/AndroidManifest.xml
@@ -1,17 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.music.lake.musiclib">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- 用于进行网络定位 -->
 
-    <application>
+    <application
+        android:networkSecurityConfig="@xml/network_security_config">
+
         <receiver android:name="com.music.lake.musiclib.service.MediaButtonIntentReceiver">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.media.AUDIO_BECOMING_NOISY" />
@@ -19,26 +22,12 @@
             </intent-filter>
         </receiver>
 
-        <!--        <receiver-->
-        <!--            android:name="com.music.lake.musiclib.widgets.appwidgets.StandardWidget"-->
-        <!--            android:label="@string/widget_standard">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />-->
-        <!--                <action android:name="com.cyl.music_lake.meta_changed" />-->
-        <!--                <action android:name="com.cyl.music_lake.play_state" />-->
-        <!--            </intent-filter>-->
-
-        <!--            <meta-data-->
-        <!--                android:name="android.appwidget.provider"-->
-        <!--                android:resource="@xml/widget_standard" />-->
-        <!--        </receiver>-->
-
         <service
             android:name="com.music.lake.musiclib.service.MusicPlayerService"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.cyl.music_lake.meta_changed" />
+                <action android:name="android.media.browse.MediaBrowserService" />
             </intent-filter>
         </service>
     </application>
