--- a/musiclib/build.gradle
+++ b/musiclib/build.gradle
@@ -1,19 +1,16 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.github.caiyonglong'
 version = '1.0.1'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -36,23 +33,23 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+    implementation 'com.orhanobut:logger:2.2.0'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     //缓存
-    implementation 'com.danikula:videocache:2.7.1'
-    implementation 'androidx.media:media:1.2.0'
+//    implementation 'com.danikula:videocache:2.7.1'
+    implementation 'androidx.media2:media2-session:1.1.3'
 
-    api "com.google.code.gson:gson:2.8.5"
+    implementation "com.google.code.gson:gson:2.8.6"
     // Glide dependencies
-    api "com.github.bumptech.glide:glide:4.11.0"
-    kapt "com.github.bumptech.glide:compiler:4.11.0"
+    implementation "com.github.bumptech.glide:glide:4.12.0"
 
-    api 'com.google.android.exoplayer:exoplayer:2.12.1'
-    api "com.google.android.exoplayer:extension-mediasession:2.12.1"
+    api 'com.google.android.exoplayer:exoplayer:2.13.3'
+    api "com.google.android.exoplayer:extension-mediasession:2.13.3"
 }
 
 task sourcesJar(type: Jar) {
