--- a/musiclib/src/main/AndroidManifest.xml
+++ b/musiclib/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:requestLegacyExternalStorage="true">
 
-        <receiver android:name="com.music.lake.musiclib.service.MediaButtonIntentReceiver">
+        <receiver android:name="com.music.lake.musiclib.service.MediaButtonIntentReceiver"
+            android:exported="false">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.media.AUDIO_BECOMING_NOISY" />
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
